--- a/nyuroprint/Dockerfile
+++ b/nyuroprint/Dockerfile
@@ -1,23 +1,53 @@
-# start by pulling the python image
-FROM python:3.10.14-slim
+# Используем образ с предустановленными инструментами для разработки
+FROM python:3.10-buster AS builder
 
-# install libgl1-mesa-glx and libglib2.0-0
-RUN apt-get update && apt-get install -y libgl1-mesa-glx libglib2.0-0
+# Обновление и установка дополнительных пакетов
+RUN apt-get update && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y \
+    openjdk-11-jdk \
+    bazel \
+    && rm -rf /var/lib/apt/lists/*
 
-# copy the requirements file into the image
+# Клонируем репозиторий TensorFlow
+WORKDIR /tensorflow
+RUN git clone https://github.com/tensorflow/tensorflow.git .
+RUN git checkout v2.12.0  # Выберите нужную версию
+
+# Настраиваем сборку без AVX
+RUN echo "build --copt=-march=x86-64" >> .bazelrc
+RUN echo "build --copt=-mno-avx" >> .bazelrc
+RUN echo "build --copt=-mno-avx2" >> .bazelrc
+RUN echo "build --copt=-mno-fma" >> .bazelrc
+RUN echo "build --copt=-mno-avx512f" >> .bazelrc
+
+# Конфигурируем и собираем TensorFlow
+RUN python3 configure.py
+RUN bazel build --config=opt //tensorflow/tools/pip_package:build_pip_package
+
+# Создаем wheel-файл
+RUN ./bazel-bin/tensorflow/tools/pip_package/build_pip_package /tmp/tensorflow_pkg
+
+# Начинаем новый этап для финального образа
+FROM python:3.10-slim-buster
+
+# Копируем собранный wheel-файл из предыдущего этапа
+COPY --from=builder /tmp/tensorflow_pkg/tensorflow-*.whl /tmp/
+
+# Устанавливаем необходимые зависимости
+RUN apt-get update && \
+    apt-get install -y libgl1-mesa-glx libglib2.0-0 && \
+    rm -rf /var/lib/apt/lists/*
+
+# Устанавливаем TensorFlow из wheel-файла
+RUN pip install /tmp/tensorflow-*.whl
+
+# Копируем остальные файлы приложения
 COPY ./requirements.txt /ai/requirements.txt
-
-# switch working directory
 WORKDIR /ai
-
-# install the dependencies and packages in the requirements file
 RUN pip install --no-cache-dir -r requirements.txt
-
-# copy every content from the local file to the image
 COPY . /ai
 
 EXPOSE 3000
 
-# configure the container to run in an executed manner
 ENTRYPOINT ["python"]
 CMD ["main.py"]
