--- a/nyuroprint/Dockerfile
+++ b/nyuroprint/Dockerfile
@@ -5,8 +5,15 @@ FROM python:3.10-buster AS builder
 RUN apt-get update && \
     DEBIAN_FRONTEND=noninteractive apt-get install -y \
     openjdk-11-jdk \
-    bazel \
+    curl \
+    gnupg \
     && rm -rf /var/lib/apt/lists/*
+
+# Установка Bazel
+RUN curl -fsSL https://bazel.build/bazel-release.pub.gpg | gpg --dearmor > bazel.gpg
+RUN mv bazel.gpg /etc/apt/trusted.gpg.d/
+RUN echo "deb [arch=amd64] https://storage.googleapis.com/bazel-apt stable jdk1.8" | tee /etc/apt/sources.list.d/bazel.list
+RUN apt-get update && apt-get install -y bazel && rm -rf /var/lib/apt/lists/*
 
 # Клонируем репозиторий TensorFlow
 WORKDIR /tensorflow
