--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,29 @@
-version: "3"
 services:
-
+  nyuroprint:
+    build:
+      context: ./nyuroprint
+      dockerfile: Dockerfile
+    runtime: nvidia  # Включаем поддержку NVIDIA
+    ports:
+      - "3000:3000"
+    networks:
+      - my_network
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [ gpu ]
+    # Параметры для лучшей производительности
+    ipc: host
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      stack:
+        soft: 67108864
+        hard: 67108864
   web:
     build:
       context: .
