--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,27 @@
-blinker==1.8.2
-certifi==2024.2.2
-charset-normalizer==3.3.2
+aiofiles==24.1.0
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.6.2.post1
+asyncpg==0.29.0
+attrs==24.2.0
 click==8.1.7
-colorama==0.4.6
-Flask==3.0.3
-Flask-Cors==4.0.0
-Flask-SocketIO==5.3.6
-Flask-SQLAlchemy==3.1.1
-greenlet==3.0.3
-idna==3.7
-itsdangerous==2.2.0
-Jinja2==3.1.3
-MarkupSafe==2.1.5
-marshmallow==3.21.2
-packaging==24.0
-psycopg2==2.9.9
-python-engineio==4.9.1
-python-socketio==5.11.3
-requests==2.31.0
-SQLAlchemy==2.0.29
-simple-websocket==1.0.0
-typing_extensions==4.11.0
-urllib3==2.2.1
-Werkzeug==3.0.2
-wsproto==1.2.0
-pyOpenSSL==24.2.1
+fastapi==0.115.4
+frozenlist==1.5.0
+greenlet==3.1.1
+h11==0.14.0
+idna==3.10
+marshmallow==3.23.1
+multidict==6.1.0
+packaging==24.1
+propcache==0.2.0
+pydantic==2.9.2
+pydantic_core==2.23.4
+python-multipart==0.0.17
+sniffio==1.3.1
+SQLAlchemy==2.0.36
+starlette==0.41.2
+typing_extensions==4.12.2
+uvicorn==0.32.0
+yarl==1.17.1
