--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aiohttp==3.10.10
 aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
+asyncio==3.4.3
 asyncpg==0.29.0
 attrs==24.2.0
 click==8.1.7
